--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,13 @@
-
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    box-sizing: border-box;  
+}
+body{
+    background-color:#ffeeba;
+    overflow: hidden;
+}
 /* footer */
 footer{
     width: 100%;
