--- a/css/layout.css
+++ b/css/layout.css
@@ -19,9 +19,18 @@ footer{
 footer a{
     text-decoration-line: none;
     color: #333;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
 }
 footer ul{
     display: flex;
     justify-content:space-around;
-    line-height: 80px;
+    line-height: 100px;
+}
+footer img{ 
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
 }
