--- a/css/layout.css
+++ b/css/layout.css
@@ -7,6 +7,11 @@
 body{
     background-color:#ffeeba;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
 }
 /* footer */
 footer{
